quote path names to handle whitespace